# webassembly-binary-security

./: README.md
02-Memory_study/Clang/: basic-study-clang19-mod.wasm  basic-study-clang19-static.wasm  basic-study-clang19.wat  basic-study-static.c
02-Memory_study/Emscripten/: basic-study-emcc-3.js  basic-study-emcc-3.wasm  basic-study-emcc-3.wat  basic-study.c
03-WebAssembly/format-string/read-data/Clang/: README.md  main.c  main.wasm  main.wat
03-WebAssembly/format-string/read-data/Emscripten/: README.md  main.js  main.wasm  main.wat
03-WebAssembly/stack-based-buffer-overflow/data-corruption/: README.md  main.c  main.js  main.wasm  main.wat  run.js
03-WebAssembly/stack-based-buffer-overflow/stack-corruption/Clang/flow-hijack/: README.md  main.c  main.wat
03-WebAssembly/stack-based-buffer-overflow/stack-corruption/Clang/overwrite-data/: main.c  main.wasm
04-WebAssembly_Component_Model/study/calculator/: README.md  composed.wasm
04-WebAssembly_Component_Model/study/calculator/adder/: adder.c  adder.component.wasm  adder.h  adder.wasm
04-WebAssembly_Component_Model/study/calculator/calculator/: Cargo.toml
04-WebAssembly_Component_Model/study/resource/: README.md  composed.wasm  final.wasm
04-WebAssembly_Component_Model/study/resource/resource-caller/: caller.component.wasm  caller.wasm  component.c  use_resource.c  use_resource.h
04-WebAssembly_Component_Model/vulns/leaked-handles/: README.md  composed.wasm  final.wasm
04-WebAssembly_Component_Model/vulns/leaked-handles/command/: Cargo.toml
04-WebAssembly_Component_Model/vulns/leaked-handles/command/src/: bindings.rs  main.rs
04-WebAssembly_Component_Model/vulns/leaked-handles/resource-caller/: Cargo.toml
04-WebAssembly_Component_Model/vulns/leaked-handles/resource-caller/src/: lib.rs
04-WebAssembly_Component_Model/vulns/memory-corruption/out-of-bound-read/: README.md
04-WebAssembly_Component_Model/vulns/memory-corruption/out-of-bound-read/command/: Cargo.toml
04-WebAssembly_Component_Model/vulns/memory-corruption/out-of-bound-write/: composed.wasm  final.wasm
04-WebAssembly_Component_Model/vulns/out-of-bound-read/: README.md  composed.wasm  final.wasm
04-WebAssembly_Component_Model/vulns/out-of-bound-read/resource-caller/: caller.component.wasm  caller.wasm  component.c
04-WebAssembly_Component_Model/vulns/out-of-bound-read/resource-creator/: Cargo.toml
04-WebAssembly_Component_Model/vulns/stack-based-buffer-overflow/: README.md
04-WebAssembly_Component_Model/vulns/stack-based-buffer-overflow/test_1/: composed.wasm  final.wasm
04-WebAssembly_Component_Model/vulns/stack-based-buffer-overflow/test_1/legitimate/: Cargo.toml
04-WebAssembly_Component_Model/vulns/stack-based-buffer-overflow/test_1/legitimate/src/: bindings.rs  lib.rs
04-WebAssembly_Component_Model/vulns/stack-based-buffer-overflow/test_2/: composed.wasm  final.wasm
04-WebAssembly_Component_Model/vulns/stack-based-buffer-overflow/test_3/: composed.wasm  final.wasm
04-WebAssembly_Component_Model/vulns/stack-based-buffer-overflow/test_3/command/: Cargo.toml
04-WebAssembly_Component_Model/vulns/stack-based-buffer-overflow/test_3/command/src/: main.rs
04-WebAssembly_Component_Model/vulns/use-after-take/: README.md  composed.wasm  final.wasm
04-WebAssembly_Component_Model/vulns/use-after-take/resource-creator/: Cargo.toml
(+57 files in other folders)
