[package]
name = "command"
version = "0.1.0"
edition = "2024"

[package.metadata.component]
package = "component:command"

[package.metadata.component.dependencies]

[dependencies]
wit-bindgen-rt = { version = "0.42.1", features = ["bitflags"] }

[package.metadata.component.target.dependencies]
"resources:creator" = { path = "../wit/resource-creator" }  # directory containing the WIT package


[package.metadata.component.target]
path = "../wit/resource-caller"
world = "app"