[package]
name = "resource-caller"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen-rt = { version = "0.42.1", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "resources:caller"

[package.metadata.component.target]
path = "../wit/resource-caller"
world = "use-resource"

[package.metadata.component.target.dependencies]
"resources:creator" = { path = "../wit/resource-creator" }
