[package]
name = "command"
version = "0.1.0"
edition = "2024"

[package.metadata.component]
package = "component:command"

[package.metadata.component.dependencies]

[dependencies]
wit-bindgen-rt = { version = "0.42.1", features = ["bitflags"] }



[package.metadata.component.target]
path = "../wit/resource-caller/"
world = "app"