[package]
name = "legitimate"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "exploit:legitimate"

[package.metadata.component.target.dependencies]
"exploit:evil" = { path = "../wit/evil" }  # directory containing the WIT package

[package.metadata.component.target]
path = "../wit/legitimate"
world = "legitimate-world"

[package.metadata.component.dependencies]
