[package]
name = "command"
version = "0.1.0"
edition = "2024"

[package.metadata.component]
package = "component:command"

[package.metadata.component.dependencies]

[dependencies]
anyhow = "1"
wit-bindgen-rt = { version = "0.42.1", features = ["bitflags"] }
clap = { version = "4.3.19", features = ["derive"] }

[package.metadata.component.target]
path = "../wit/legitimate"
world = "app"

[package.metadata.component.target.dependencies]
"exploit:evil" = { path = "../wit/evil" }
